--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.518.0",
     "next": "15.3.4",
     "react": "^19.0.0",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^19.0.0",
     "react-wheel-of-prizes": "^1.1.0",
     "tailwind-merge": "^3.3.1"
