--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "resend": "^6.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
