Patch readlink errors on Windows

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "node -r ./scripts/patch-readlink.cjs ./node_modules/next/dist/bin/next dev",
+    "build": "node -r ./scripts/patch-readlink.cjs ./node_modules/next/dist/bin/next build",
+    "start": "node -r ./scripts/patch-readlink.cjs ./node_modules/next/dist/bin/next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
