--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "resend": "^6.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.180.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
